--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nani-kids",
   "version": "0.1.0",
+  "homepage": "https://macrobee.github.io/nanikids/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
